[package]
name = "streams-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.16"
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "v1.2.0"}
tokio = {version = "1.8.2", features = ["full"]}
rand = "0.7.3"
dotenv = "0.15.0" 